force-app/main/default/objects/Demo__c/fields/DemoId__c.field-meta.xml
<CustomField>
    <fullName>DemoId__c</fullName>
    <label>DemoId</label>
    <type>Text</type>
    <length>120</length>
</CustomField>