force-app/main/default/objects/Demo__c/fields/DemoNumber_Number__c.field-meta.xml
<CustomField>
    <fullName>DemoNumber_Number__c</fullName>
    <label>DemoNumber(Number).</label>
    <type>Text</type>
    <length>120</length>
</CustomField>