force-app/main/default/objects/Demo__c/fields/DemoPicklist__c.field-meta.xml
<CustomField>
    <fullName>DemoPicklist__c</fullName>
    <label>DemoPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>