force-app/main/default/objects/Demo__c/fields/DemoText__c.field-meta.xml
<CustomField>
    <fullName>DemoText__c</fullName>
    <label>DemoText</label>
    <type>Text</type>
    <length>120</length>
</CustomField>